# test_wireless

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  config_manager.c  config_manager.h  encryption.c  encryption.h  idf_component.yml  lora_mesh.c  lora_mesh.h  lora_packet.h  main.c  mesh_manager.c  mesh_manager.h  mesh_protocol.c  mesh_protocol.h  mesh_types.h  nvs_keys.h  rfm95w.c  rfm95w.h  web_server.c  web_server.h
main/web/: dashboard.html  devices.html  lora_config.html  script.js  styles.css
